# ds18b20-datalogger

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  pyproject.toml  temp-matrix_5x6-grafana_desktop.json  temp-matrix_5x6.py
.github/workflows/: tests.yml
docs/: backlog.md  mois.md  production.md  sandbox.md
ds18b20_datalogger/: cli.py  core.py  datalogger.yaml  grafana-dashboard.json  model.py  util.py
etc/: mois.yaml
tests/: datalogger-offset.yaml  onewire-defunct.yaml  onewire-success.yaml  test_cli.py  test_core.py  test_model.py
